fixed dropdown width on mobile layout

--- a/src/stylings/search-form-mobile.scss
+++ b/src/stylings/search-form-mobile.scss
@@ -15,4 +15,9 @@
         margin: 30px auto;
         flex-flow: wrap;
     }
+
+    div.search-dropdown-container{
+        max-width: 300px;
+        width: 100%;
+    }
 }
